add processing java

--- a/pde/makefile
+++ b/pde/makefile
@@ -1,5 +1,6 @@
 b:
-	java
+	javac -cp ./core.jar:. Main.java
+	java -cp ./core.jar:. Main
 
 pde:
 	~/my/pde/processing-java --sketch=../@@@ --output=./outputByProcessing --force --run
